<?xml version="1.0"?>
<package format="3">
  <name>microstrain_examples</name>
  <version>1.1.4</version>
  <description>Example listener for Parker LORD Sensing inertial device driver ros_mscl (C++).</description>
  <maintainer email="melissa_gill@lord.com">mgill</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/LORD-MicroStrain/ROS-MSCL</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>microstrain_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>microstrain_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
