<?xml version="1.0"?>
<package format="2">
  <name>microstrain_inertial_examples</name>
  <version>3.2.1</version>
  <description>Simple examples using the microstrain_inertial_driver for MicroStrain sensors.</description>
  <maintainer email="rob.fisher@parker.com">Rob Fisher</maintainer>
  <maintainer email="melissa.gill@parker.com">Melissa Gill</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/LORD-MicroStrain/microstrain_inertial</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
