<?xml version="1.0"?>
<package format="3">
  <name>microstrain_inertial_quickview</name>
  <version>1.1.4</version>
  <description>Simple quickview screen for Microstrain Inertial Devices</description>
  <maintainer email="rob.fisher@parker.com">Rob Fisher</maintainer>
  <maintainer email="melissa.gill@parker.com">Melissa Gill</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/LORD-MicroStrain/microstrain_inertial</url>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>microstrain_inertial_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/microstrain_inertial_quickview_common/plugin.xml"/>
  </export>
</package>
