<?xml version="1.0"?>
<package format="3">
  <name>microstrain_inertial_quickview</name>
  <version>1.1.4</version>
  <description>Simple quickview screen for Microstrain Inertial Devices</description>
  <maintainer email="rob.fisher@parker.com">Rob Fisher</maintainer>
  <maintainer email="melissa.gill@parker.com">Melissa Gill</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/LORD-MicroStrain/microstrain_inertial</url>

  <depend>rclpy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>microstrain_inertial_msgs</depend>

  <!-- Order and type is important here as python-transforms32-pip is dependent on python3-pip -->
  <build_depend>python3-pip</build_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/microstrain_inertial_quickview_common/plugin.xml"/>
  </export>
</package>
